style.css
/* ... */
.home__arrow,
.home__line {
    position: absolute;
    filter: invert(1);
    width: 50px;
    transition: filter .4s;
}

.home__arrow {
    left: 40%;
    bottom: -4rem;
}

.home__line {
    right: -2rem;
    bottom: 5rem;

}

.home__perfil .geometric-box {
    top: 2.5rem;
    left: -.7rem;
    z-index: 10;
}

.home__social {
    height: max-content;
    position: absolute;
    left: -3rem;
    top: 0;
    bottom: 0;
    margin: auto 0;
    display: grid;
    row-gap: 1rem;
}
.home__social-link {
    background-color: var(--black-color-light);
    color: var(--white-color);
    font-size: 1.25rem;
    padding: 6px;
    display: grid;
    place-items: center;
    transition: background-color .3s;
}

.home__social-link:hover {
    background-color: var(--black-color);
}

.home__info {
    margin-top: 4rem;
}

.home__description {
    text-align: center;
    color: var(--title-color);
    margin-bottom: 1.5rem;
}

.home__description b {
    background: linear-gradient(90deg, hsla(14, 98%, 50%, .3), hsla(14, 98%, 50%, .0));
}

.home__scroll {
    display: block;
    width: max-content;
    margin: 0 auto;
}

.home__scroll-text {
    display: none;
}

.home__scroll-box {
    background-color: var(--black-color);
    color: var(--white-color);
    width: 36px;
    height: 36px;
    display: grid;
    place-items: center;
    font-size: 1rem;
    cursor: pointer;
    overflow: hidden;
    transition: background-color .4s;
}

/* Animate scroll icon */
.home__scroll-box i {
    animation: scroll-down 3s infinite;
}

@keyframes scroll-down {
    0% {
        transform: translateY(-1rem);
        opacity: 0;
    }
    50% {
        transform: translateY(0);
        opacity: 1;
    }
    100% {
        transform: translateY(.6rem);
        opacity: 0;
    }
}

/*=================== ABOUT ===========================*/
.about {
    background-color: var(--container-color);
    transition: background-color .4s;
}

.about__container {
    row-gap: 0;
}

.about__perfil {
    position: relative;
    justify-self: center;
    margin-block: 2.5rem 4.5rem;
}

.about__image {
    width: 220px;
}

.about__img {
    position: relative;
    border: 4px solid var(--white-color);
    z-index: 1;
}

.about__shadow,
.about__box,
.about__line {
    position: absolute;
}

.about__shadow {
    width: 160px;
    height: 400px;
    background-color: var(--body-color);
    top: -2.5rem;
    right: -3.5rem;
    border-bottom: 4px solid var(--first-color);
    transition: background-color .4s;
}

.about__perfil .geometric-box {
    top: 1.5rem;
    right: -2.8rem;
}

.about__line {
    filter: invert(1);
    right: -1.25rem;
    top: 6rem;
    width: 50px;
    transition: filter .4s;
}

.about__box {
    width: 40px;
    height: 40px;
    background-color: var(--first-color);
    right: -.8rem;
    bottom: 1.5rem;
}

.about__info {
    padding-left: 1.25rem;
}

.about__description {
    position: relative;
    color: var(--title-color);
    margin-bottom: 1.5rem;
}

.about__description::after {
    content: "";
    width: 20px;
    height: 1px;
    background-color: var(--title-color);
    position: absolute;
    left: -1.75rem;
    top: .5rem;
}

.about__list {
    list-style: square;
    color: var(--title-color);
    margin-bottom: 3rem;
}

.about__buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    column-gap: 1rem;
    
}

/*================== BUTTON ====================*/
.button,
.button__ghost {
    display: flex;
    align-items: center;
    justify-content: center;
    column-gap: .5rem;
}

.button {
    background-color: var(--black-color);
    padding: 1.1rem 1.5rem;
    color: var(--white-color);
    font-weight: var(--font-medium);
    transition: background-color .4s;
}

button i {
    font-size: 1.25rem;
}

.button:hover {
    background-color: var(--first-color);
}

.button__ghost {
    border: 3px solid var(--black-color);
    color: var(--black-color);
    padding: .5rem;
    transition: border .4s, color .4s;
}

.button__ghost i {
    font-size: 1.25rem;
}

.button__ghost:hover {
    border: 3px solid var(--first-color);
    color: var(--first-color);
}

/*========================= SERVICES ==========================*/

.services__container{
    grid-template-columns: 250px;
    justify-content: center;
    row-gap: 2rem;
    padding-top: 1rem;
}

.services__card {
    position: relative;
}

.services__borde {
    position: absolute;
    width: 100%;
    height: 100%;
    border: 4px solid var(--first-color);
    top: 0;
    left: 0;
    transition: transform .4s;
}

.services__card:hover .services__borde {
    transform: translate(.75rem, .75rem);
}

.services__content {
    height: 100%;
    background-color: var(--body-color);
    border: 4px solid var(--black-color);
    padding: 6rem 1rem 3rem;
    z-index: 5;
    position: relative;
    transition: background-color .4s, border 4s;
}

.services__icon {
    position: relative;
    display: inline-block;
}

.services__icon i {
    font-size: 2rem;
    color: var(--black-color);
    position: relative;
    z-index: 5;
}
.services__box {
    position: absolute;
    width: 25px;
    height: 24px;
    background-color: var(--first-color);
    right: -2px;
    top: -2px;
}

.services__title {
    font-size: var(--h2-font-size);
    margin-bottom: 1.25rem;
}

/*============================== PROJECTS ========================*/
.projects {
    background-color: var(--container-color);
    transition: background-color .4s;
}

.projects__container {
    row-gap: 2rem;
}

.projects__card {
    padding: 1rem 1rem 2rem;
    transition: background-color .4s;
}

.projects__image {
    position: relative;
    margin-bottom: .75rem;
}


.projects__button {
    position: absolute;
    right: 1rem;
    bottom: -1.5rem;
    padding: 1rem;
}


.projects__content {
    margin-bottom: 1.25rem;
}
/* ... */

